--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
   "name": "echoecommerce",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.2.0",
     "@paypal/react-paypal-js": "^8.1.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.0.4",
-    "web-vitals": "^3.4.0"
+    "styled-components": "^6.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
