--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "echoecommerce",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.2.1",
     "@paypal/react-paypal-js": "^8.1.3",
+    "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.1",
     "blurhash": "^2.0.5",
     "react": "^18.2.0",
@@ -12,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.8"
