--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "echoecommerce",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "private": true,
+  "repository": {
+    "url": "https://github.com/rushabh-modi/EchoEcommerce",
+    "type": "git"
+  },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.1",
     "@paypal/react-paypal-js": "^8.1.3",
